--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -35,7 +35,7 @@ body {
     justify-content: space-between;
     grid-column-start: 1;
     background-color: #570A57;
-    height: 100vh;
+    max-height: 150vh;
     flex: 1;
 }
 
